Fix the close icon overlapping Expressions box
Screenshot: https://imgur.com/a/tdvOgTz

Bug: 1434899
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/4474787
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
(cherry picked from commit 8a9231c68252b9575c2244b64a976e67848c617e)
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/4489364
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/console/consolePinPane.css
+++ b/front_end/panels/console/consolePinPane.css
@@ -6,8 +6,8 @@
 
 .close-button {
   position: absolute;
-  top: 7px;
-  left: 5px;
+  top: 3px;
+  left: 0;
 }
 
 .console-pins {
